--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,4 @@
- "builds": [{
+ {"builds": [{
         "src": "venti/wsgi.py",
         "use": "@vercel/python",
         "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
